tooling/nargo_cli/tests/snapshots/execution_success/array_eq/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "a",
        "type": {
          "kind": "array",
          "length": 32,
          "type": {
            "kind": "field"
          }
        },
        "visibility": "private"
      },
      {
        "name": "b",
        "type": {
          "kind": "array",
          "length": 32,
          "type": {
            "kind": "field"
          }
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _63",
    "private parameters indices : [_0, _1, _2, _3, _4, _5, _6, _7, _8, _9, _10, _11, _12, _13, _14, _15, _16, _17, _18, _19, _20, _21, _22, _23, _24, _25, _26, _27, _28, _29, _30, _31, _32, _33, _34, _35, _36, _37, _38, _39, _40, _41, _42, _43, _44, _45, _46, _47, _48, _49, _50, _51, _52, _53, _54, _55, _56, _57, _58, _59, _60, _61, _62, _63]",
    "public parameters indices : []",
    "return value indices : []",
    "EXPR [ (1, _0) (-1, _32) 0 ]",
    "EXPR [ (1, _1) (-1, _33) 0 ]",
    "EXPR [ (1, _2) (-1, _34) 0 ]",
    "EXPR [ (1, _3) (-1, _35) 0 ]",
    "EXPR [ (1, _4) (-1, _36) 0 ]",
    "EXPR [ (1, _5) (-1, _37) 0 ]",
    "EXPR [ (1, _6) (-1, _38) 0 ]",
    "EXPR [ (1, _7) (-1, _39) 0 ]",
    "EXPR [ (1, _8) (-1, _40) 0 ]",
    "EXPR [ (1, _9) (-1, _41) 0 ]",
    "EXPR [ (1, _10) (-1, _42) 0 ]",
    "EXPR [ (1, _11) (-1, _43) 0 ]",
    "EXPR [ (1, _12) (-1, _44) 0 ]",
    "EXPR [ (1, _13) (-1, _45) 0 ]",
    "EXPR [ (1, _14) (-1, _46) 0 ]",
    "EXPR [ (1, _15) (-1, _47) 0 ]",
    "EXPR [ (1, _16) (-1, _48) 0 ]",
    "EXPR [ (1, _17) (-1, _49) 0 ]",
    "EXPR [ (1, _18) (-1, _50) 0 ]",
    "EXPR [ (1, _19) (-1, _51) 0 ]",
    "EXPR [ (1, _20) (-1, _52) 0 ]",
    "EXPR [ (1, _21) (-1, _53) 0 ]",
    "EXPR [ (1, _22) (-1, _54) 0 ]",
    "EXPR [ (1, _23) (-1, _55) 0 ]",
    "EXPR [ (1, _24) (-1, _56) 0 ]",
    "EXPR [ (1, _25) (-1, _57) 0 ]",
    "EXPR [ (1, _26) (-1, _58) 0 ]",
    "EXPR [ (1, _27) (-1, _59) 0 ]",
    "EXPR [ (1, _28) (-1, _60) 0 ]",
    "EXPR [ (1, _29) (-1, _61) 0 ]",
    "EXPR [ (1, _30) (-1, _62) 0 ]",
    "EXPR [ (1, _31) (-1, _63) 0 ]"
  ],
  "debug_symbols": "fZLBjoMgFEX/hbULH9pO7a9MJgYVGxKChsIkE8O/D74r03Yx3VyE5zmBB5uY9BBvvXHzchfXz00M3lhrbr1dRhXM4vLqlipRpn3wWucl8VTP1Kq8dkFcXbS2Et/KRv7pvirHY1A+V+tKaDflMQtnY/X+laoHXf+PEhWY6PyHn155esN3l7YIuq59GFL6yhM1Gv9yZFGzjjglZ8PZcp44z5wfnBfODtQBgybgBJ4gIBgICoKDICFYJCzy2AMsEhYJi4RFwiJhkbBIWBpYmt2S9v54owarj2udoxufbjn8rKVS3sHql1FP0eu9PVzLDfsF",
  "file_map": {
    "50": {
      "source": "// Simple example of checking where two arrays are equal\nfn main(a: [Field; 32], b: [Field; 32]) {\n    assert(a == b);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": []
}
