tooling/nargo_cli/tests/snapshots/execution_success/array_eq/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "a",
        "type": {
          "kind": "array",
          "length": 32,
          "type": {
            "kind": "field"
          }
        },
        "visibility": "private"
      },
      {
        "name": "b",
        "type": {
          "kind": "array",
          "length": 32,
          "type": {
            "kind": "field"
          }
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : 63",
    "private parameters indices : [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63]",
    "public parameters indices : []",
    "return value indices : []",
    "EXPR [ (1, _0) (-1, _32) 0 ]",
    "EXPR [ (1, _1) (-1, _33) 0 ]",
    "EXPR [ (1, _2) (-1, _34) 0 ]",
    "EXPR [ (1, _3) (-1, _35) 0 ]",
    "EXPR [ (1, _4) (-1, _36) 0 ]",
    "EXPR [ (1, _5) (-1, _37) 0 ]",
    "EXPR [ (1, _6) (-1, _38) 0 ]",
    "EXPR [ (1, _7) (-1, _39) 0 ]",
    "EXPR [ (1, _8) (-1, _40) 0 ]",
    "EXPR [ (1, _9) (-1, _41) 0 ]",
    "EXPR [ (1, _10) (-1, _42) 0 ]",
    "EXPR [ (1, _11) (-1, _43) 0 ]",
    "EXPR [ (1, _12) (-1, _44) 0 ]",
    "EXPR [ (1, _13) (-1, _45) 0 ]",
    "EXPR [ (1, _14) (-1, _46) 0 ]",
    "EXPR [ (1, _15) (-1, _47) 0 ]",
    "EXPR [ (1, _16) (-1, _48) 0 ]",
    "EXPR [ (1, _17) (-1, _49) 0 ]",
    "EXPR [ (1, _18) (-1, _50) 0 ]",
    "EXPR [ (1, _19) (-1, _51) 0 ]",
    "EXPR [ (1, _20) (-1, _52) 0 ]",
    "EXPR [ (1, _21) (-1, _53) 0 ]",
    "EXPR [ (1, _22) (-1, _54) 0 ]",
    "EXPR [ (1, _23) (-1, _55) 0 ]",
    "EXPR [ (1, _24) (-1, _56) 0 ]",
    "EXPR [ (1, _25) (-1, _57) 0 ]",
    "EXPR [ (1, _26) (-1, _58) 0 ]",
    "EXPR [ (1, _27) (-1, _59) 0 ]",
    "EXPR [ (1, _28) (-1, _60) 0 ]",
    "EXPR [ (1, _29) (-1, _61) 0 ]",
    "EXPR [ (1, _30) (-1, _62) 0 ]",
    "EXPR [ (1, _31) (-1, _63) 0 ]",
    "",
    ""
  ],
  "debug_symbols": "ldVBCoMwEIXhu8zahTNW23qVUiRqlEBIJMZCEe/eKBXcvp2T4c/mQ7JSr9tlbIwb/Ez1ayXrOxWNd2laKT+O5km5fZqjCpFq5jwj7fr9q9oyGozVVJf59s6I0UDQoECDGxqUaFChwR0NHmjwhOFwatiaYWyGtRnmZtibYXCGxRkmZ9hcYHPB/2/YXGBzgc0FNhfYXGBzgc0FNi9g8wI0T0MbjLVmbK5vSTr+qGBUa/V/HBbXXbbxO52bs5+C73S/BL3fdOzS9T8=",
  "file_map": {
    "50": {
      "source": "// Simple example of checking where two arrays are equal\nfn main(a: [Field; 32], b: [Field; 32]) {\n    assert(a == b);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": []
}
