tooling/nargo_cli/tests/snapshots/execution_success/array_eq/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: [Field; 32], v1: [Field; 32]):
    (no terminator instruction)
}
